Hiding selection section buttons on mobile. Fixes #14.

--- a/assets/stylesheets/layout/_panel-selection.scss
+++ b/assets/stylesheets/layout/_panel-selection.scss
@@ -70,3 +70,9 @@
 		color: $color__teal-light;
 	}
 }
+
+@include mobile {
+	#selection .button {
+		display: none;
+	}
+}
